@@ -1,3 +1,5 @@
+import org.apache.tools.ant.filters.ReplaceTokens
+
 plugins {
     alias(libs.plugins.shadow)
     id("module")
@@ -8,7 +10,7 @@ application {
     mainClass.set("io.gitlab.arturbosch.detekt.cli.Main")
 }
 
-val formattingJar by configurations.creating {
+val pluginsJar: Configuration by configurations.creating {
     isTransitive = false
 }
 
@@ -27,7 +29,9 @@ dependencies {
     testImplementation(projects.detektTestUtils)
     testImplementation(libs.assertj)
 
-    formattingJar(projects.detektFormatting)
+    pluginsJar(projects.detektFormatting)
+    pluginsJar(projects.detektRulesLibraries)
+    pluginsJar(projects.detektRulesRuleauthors)
 }
 
 val javaComponent = components["java"] as AdhocComponentWithVariants
@@ -46,6 +50,18 @@ tasks {
         mergeServiceFiles()
     }
 
+    shadowDistZip {
+        archiveBaseName.set("detekt-cli")
+    }
+    shadowDistTar { enabled = false }
+    distZip { enabled = false }
+    distTar { enabled = false }
+
+    processTestResources {
+        filter(ReplaceTokens::class, "tokens" to mapOf("kotlinVersion" to libs.versions.kotlin.get()))
+        filteringCharset = "UTF-8"
+    }
+
     val runWithHelpFlag by registering(JavaExec::class) {
         outputs.upToDateWhen { true }
         classpath = files(shadowJar)
@@ -54,11 +70,18 @@ tasks {
 
     val runWithArgsFile by registering(JavaExec::class) {
         // The task generating these jar files run first.
-        inputs.files(formattingJar)
+        inputs.files(pluginsJar)
         doNotTrackState("The entire root directory is read as the input source.")
         classpath = files(shadowJar)
         workingDir = rootDir
-        args = listOf("@./config/detekt/argsfile", "-p", formattingJar.singleFile.path)
+        args = listOf("@./config/detekt/argsfile", "-p", pluginsJar.files.joinToString(",") { it.path })
+    }
+
+    withType<Jar>().configureEach {
+        manifest {
+            // Workaround for https://github.com/detekt/detekt/issues/5576
+            attributes(mapOf("Add-Opens" to "java.base/java.lang"))
+        }
     }
 
     check {
